Fix footer element spacing and alignment

--- a/client/components/preview.css
+++ b/client/components/preview.css
@@ -79,9 +79,34 @@
   color: #282828;
 }
 
-.footer {
+.footerLeft {
+  margin-bottom: 45px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.footerRight {
+  margin-bottom: 45px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.footerElement {
   font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
-  margin-bottom: 45px;
   color: #282828;
+  cursor: pointer;
 }
+
+.comments {
+  margin: 0 15px 0 0;
+}
+
+/* .footerElementRight {
+  font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  color: #282828;
+  cursor: pointer;
+  margin: 0 15px;
+} */
+
